// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs default 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0",
        }
      }
    >
      <Stepper
        currentStep={0}
        steps={
          Array [
            Object {
              "title": "Step 1",
            },
            Object {
              "title": "Step 2",
            },
            Object {
              "title": "Step 3",
            },
            Object {
              "title": "Step 4",
            },
            Object {
              "title": "Step 5",
            },
          ]
        }
      >
        <div
          className="HoiPoi__Stepper__root-1-0"
        >
          <Steps
            current={0}
            direction="horizontal"
            iconPrefix="rc"
            initial={0}
            labelPlacement="horizontal"
            prefixCls="rc-steps"
            progressDot={false}
            size=""
            status="process"
            type="default"
          >
            <div
              className="rc-steps rc-steps-horizontal rc-steps-label-horizontal"
              style={Object {}}
            >
              <Step
                active={true}
                className="HoiPoi__Stepper__active-1-2"
                icon={
                  <span
                    onClick={[Function]}
                  >
                    <Text
                      className="HoiPoi__Stepper__icon-1-1"
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="normal"
                    >
                      1
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$.$0"
                prefixCls="rc-steps"
                progressDot={false}
                status="process"
                stepIndex={0}
                stepNumber="1"
                title={
                  <span
                    onClick={[Function]}
                  >
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="bold"
                    >
                      Step 1
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-process HoiPoi__Stepper__active-1-2 rc-steps-item-custom rc-steps-item-active"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span
                          onClick={[Function]}
                        >
                          <Text
                            className="HoiPoi__Stepper__icon-1-1"
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4 HoiPoi__Text__normal-1-11 HoiPoi__Text__medium-1-7 HoiPoi__Stepper__icon-1-1"
                            >
                              1
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span
                          onClick={[Function]}
                        >
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="bold"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4 HoiPoi__Text__bold-1-10 HoiPoi__Text__medium-1-7"
                            >
                              Step 1
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
              <Step
                active={false}
                className=""
                icon={
                  <span>
                    <Text
                      className="HoiPoi__Stepper__icon-1-1"
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="normal"
                    >
                      2
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$.$1"
                prefixCls="rc-steps"
                progressDot={false}
                status="wait"
                stepIndex={1}
                stepNumber="2"
                title={
                  <span>
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="normal"
                    >
                      Step 2
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-wait rc-steps-item-custom"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span>
                          <Text
                            className="HoiPoi__Stepper__icon-1-1"
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4 HoiPoi__Text__normal-1-11 HoiPoi__Text__medium-1-7 HoiPoi__Stepper__icon-1-1"
                            >
                              2
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span>
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4 HoiPoi__Text__normal-1-11 HoiPoi__Text__medium-1-7"
                            >
                              Step 2
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
              <Step
                active={false}
                className=""
                icon={
                  <span>
                    <Text
                      className="HoiPoi__Stepper__icon-1-1"
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="normal"
                    >
                      3
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$.$2"
                prefixCls="rc-steps"
                progressDot={false}
                status="wait"
                stepIndex={2}
                stepNumber="3"
                title={
                  <span>
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="normal"
                    >
                      Step 3
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-wait rc-steps-item-custom"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span>
                          <Text
                            className="HoiPoi__Stepper__icon-1-1"
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4 HoiPoi__Text__normal-1-11 HoiPoi__Text__medium-1-7 HoiPoi__Stepper__icon-1-1"
                            >
                              3
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span>
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4 HoiPoi__Text__normal-1-11 HoiPoi__Text__medium-1-7"
                            >
                              Step 3
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
              <Step
                active={false}
                className=""
                icon={
                  <span>
                    <Text
                      className="HoiPoi__Stepper__icon-1-1"
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="normal"
                    >
                      4
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$.$3"
                prefixCls="rc-steps"
                progressDot={false}
                status="wait"
                stepIndex={3}
                stepNumber="4"
                title={
                  <span>
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="normal"
                    >
                      Step 4
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-wait rc-steps-item-custom"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span>
                          <Text
                            className="HoiPoi__Stepper__icon-1-1"
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4 HoiPoi__Text__normal-1-11 HoiPoi__Text__medium-1-7 HoiPoi__Stepper__icon-1-1"
                            >
                              4
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span>
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4 HoiPoi__Text__normal-1-11 HoiPoi__Text__medium-1-7"
                            >
                              Step 4
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
              <Step
                active={false}
                className=""
                icon={
                  <span>
                    <Text
                      className="HoiPoi__Stepper__icon-1-1"
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="normal"
                    >
                      5
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$.$4"
                prefixCls="rc-steps"
                progressDot={false}
                status="wait"
                stepIndex={4}
                stepNumber="5"
                title={
                  <span>
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="normal"
                    >
                      Step 5
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-wait rc-steps-item-custom"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span>
                          <Text
                            className="HoiPoi__Stepper__icon-1-1"
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4 HoiPoi__Text__normal-1-11 HoiPoi__Text__medium-1-7 HoiPoi__Stepper__icon-1-1"
                            >
                              5
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span>
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-1-4 HoiPoi__Text__normal-1-11 HoiPoi__Text__medium-1-7"
                            >
                              Step 5
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
            </div>
          </Steps>
        </div>
      </Stepper>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Tabs with completed 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0",
        }
      }
    >
      <Stepper
        currentStep={3}
        steps={
          Array [
            Object {
              "isCompleted": true,
              "title": "Step 1",
            },
            Object {
              "isCompleted": true,
              "title": "Step 2",
            },
            Object {
              "title": "Step 3",
            },
            Object {
              "title": "Step 4",
            },
            Object {
              "title": "Step 5",
            },
          ]
        }
      >
        <div
          className="HoiPoi__Stepper__root-2-0"
        >
          <Steps
            current={3}
            direction="horizontal"
            iconPrefix="rc"
            initial={0}
            labelPlacement="horizontal"
            prefixCls="rc-steps"
            progressDot={false}
            size=""
            status="process"
            type="default"
          >
            <div
              className="rc-steps rc-steps-horizontal rc-steps-label-horizontal"
              style={Object {}}
            >
              <Step
                active={false}
                className="HoiPoi__Stepper__completed-2-3"
                icon={
                  <span
                    onClick={[Function]}
                  >
                    <Text
                      className="HoiPoi__Stepper__icon-2-1"
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="normal"
                    >
                      <Icon
                        color="white"
                        name="tick"
                        overrides={Object {}}
                        size="small"
                      />
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$.$0"
                prefixCls="rc-steps"
                progressDot={false}
                status="finish"
                stepIndex={0}
                stepNumber="1"
                title={
                  <span
                    onClick={[Function]}
                  >
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="bold"
                    >
                      Step 1
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-finish HoiPoi__Stepper__completed-2-3 rc-steps-item-custom"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span
                          onClick={[Function]}
                        >
                          <Text
                            className="HoiPoi__Stepper__icon-2-1"
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4 HoiPoi__Text__normal-2-11 HoiPoi__Text__medium-2-7 HoiPoi__Stepper__icon-2-1"
                            >
                              <Icon
                                color="white"
                                name="tick"
                                overrides={Object {}}
                                size="small"
                              >
                                <span
                                  className="HoiPoi__Icon__root-2-15 HoiPoi__Icon__small-2-16"
                                >
                                  <Tick
                                    color="white"
                                  >
                                    <svg
                                      viewBox="0 0 10 10"
                                      xmlns="http://www.w3.org/2000/svg"
                                      xmlnsXlink="http://www.w3.org/1999/xlink"
                                    >
                                      <defs>
                                        <path
                                          d="M3.475 6.61l-2.32-2.415L0 5.397 3.464 9 10 2.201 8.845 1l-5.37 5.61z"
                                          id="a"
                                        />
                                      </defs>
                                      <use
                                        fill="white"
                                        fillRule="evenodd"
                                        xlinkHref="#a"
                                      />
                                    </svg>
                                  </Tick>
                                </span>
                              </Icon>
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span
                          onClick={[Function]}
                        >
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="bold"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4 HoiPoi__Text__bold-2-10 HoiPoi__Text__medium-2-7"
                            >
                              Step 1
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
              <Step
                active={false}
                className="HoiPoi__Stepper__completed-2-3"
                icon={
                  <span
                    onClick={[Function]}
                  >
                    <Text
                      className="HoiPoi__Stepper__icon-2-1"
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="normal"
                    >
                      <Icon
                        color="white"
                        name="tick"
                        overrides={Object {}}
                        size="small"
                      />
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$.$1"
                prefixCls="rc-steps"
                progressDot={false}
                status="finish"
                stepIndex={1}
                stepNumber="2"
                title={
                  <span
                    onClick={[Function]}
                  >
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="bold"
                    >
                      Step 2
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-finish HoiPoi__Stepper__completed-2-3 rc-steps-item-custom"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span
                          onClick={[Function]}
                        >
                          <Text
                            className="HoiPoi__Stepper__icon-2-1"
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4 HoiPoi__Text__normal-2-11 HoiPoi__Text__medium-2-7 HoiPoi__Stepper__icon-2-1"
                            >
                              <Icon
                                color="white"
                                name="tick"
                                overrides={Object {}}
                                size="small"
                              >
                                <span
                                  className="HoiPoi__Icon__root-2-15 HoiPoi__Icon__small-2-16"
                                >
                                  <Tick
                                    color="white"
                                  >
                                    <svg
                                      viewBox="0 0 10 10"
                                      xmlns="http://www.w3.org/2000/svg"
                                      xmlnsXlink="http://www.w3.org/1999/xlink"
                                    >
                                      <defs>
                                        <path
                                          d="M3.475 6.61l-2.32-2.415L0 5.397 3.464 9 10 2.201 8.845 1l-5.37 5.61z"
                                          id="a"
                                        />
                                      </defs>
                                      <use
                                        fill="white"
                                        fillRule="evenodd"
                                        xlinkHref="#a"
                                      />
                                    </svg>
                                  </Tick>
                                </span>
                              </Icon>
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span
                          onClick={[Function]}
                        >
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="bold"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4 HoiPoi__Text__bold-2-10 HoiPoi__Text__medium-2-7"
                            >
                              Step 2
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
              <Step
                active={false}
                className=""
                icon={
                  <span>
                    <Text
                      className="HoiPoi__Stepper__icon-2-1"
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="normal"
                    >
                      3
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$.$2"
                prefixCls="rc-steps"
                progressDot={false}
                status="finish"
                stepIndex={2}
                stepNumber="3"
                title={
                  <span>
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="normal"
                    >
                      Step 3
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-finish rc-steps-item-custom"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span>
                          <Text
                            className="HoiPoi__Stepper__icon-2-1"
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4 HoiPoi__Text__normal-2-11 HoiPoi__Text__medium-2-7 HoiPoi__Stepper__icon-2-1"
                            >
                              3
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span>
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4 HoiPoi__Text__normal-2-11 HoiPoi__Text__medium-2-7"
                            >
                              Step 3
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
              <Step
                active={true}
                className="HoiPoi__Stepper__active-2-2"
                icon={
                  <span
                    onClick={[Function]}
                  >
                    <Text
                      className="HoiPoi__Stepper__icon-2-1"
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="normal"
                    >
                      4
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$.$3"
                prefixCls="rc-steps"
                progressDot={false}
                status="process"
                stepIndex={3}
                stepNumber="4"
                title={
                  <span
                    onClick={[Function]}
                  >
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="bold"
                    >
                      Step 4
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-process HoiPoi__Stepper__active-2-2 rc-steps-item-custom rc-steps-item-active"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span
                          onClick={[Function]}
                        >
                          <Text
                            className="HoiPoi__Stepper__icon-2-1"
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4 HoiPoi__Text__normal-2-11 HoiPoi__Text__medium-2-7 HoiPoi__Stepper__icon-2-1"
                            >
                              4
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span
                          onClick={[Function]}
                        >
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="bold"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4 HoiPoi__Text__bold-2-10 HoiPoi__Text__medium-2-7"
                            >
                              Step 4
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
              <Step
                active={false}
                className=""
                icon={
                  <span>
                    <Text
                      className="HoiPoi__Stepper__icon-2-1"
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="normal"
                    >
                      5
                    </Text>
                  </span>
                }
                iconPrefix="rc"
                key=".$.$4"
                prefixCls="rc-steps"
                progressDot={false}
                status="wait"
                stepIndex={4}
                stepNumber="5"
                title={
                  <span>
                    <Text
                      className=""
                      isTruncated={false}
                      overrides={Object {}}
                      size="medium"
                      type="normal"
                    >
                      Step 5
                    </Text>
                  </span>
                }
                wrapperStyle={Object {}}
              >
                <div
                  className="rc-steps-item rc-steps-item-wait rc-steps-item-custom"
                  style={Object {}}
                >
                  <div
                    className="rc-steps-item-container"
                  >
                    <div
                      className="rc-steps-item-tail"
                    />
                    <div
                      className="rc-steps-item-icon"
                    >
                      <span
                        className="rc-steps-icon"
                      >
                        <span>
                          <Text
                            className="HoiPoi__Stepper__icon-2-1"
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4 HoiPoi__Text__normal-2-11 HoiPoi__Text__medium-2-7 HoiPoi__Stepper__icon-2-1"
                            >
                              5
                            </span>
                          </Text>
                        </span>
                      </span>
                    </div>
                    <div
                      className="rc-steps-item-content"
                    >
                      <div
                        className="rc-steps-item-title"
                      >
                        <span>
                          <Text
                            className=""
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-2-4 HoiPoi__Text__normal-2-11 HoiPoi__Text__medium-2-7"
                            >
                              Step 5
                            </span>
                          </Text>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </Step>
            </div>
          </Steps>
        </div>
      </Stepper>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
